# working-with-LLMs

./: .gitignore  Embedchain_chatbot_on_external_data.ipynb  LLM_LoRA_finetuning_on_external_data.ipynb  Langchain_external_data_to_LLM.ipynb  README.md  llama-3-70b_vLLM.sh  mistral-7b_vLLM.sh  mixtral-8x22b_vLLM.sh  pyproject.toml  try_GPT4all_locally.ipynb  try_LLaMa_locally.ipynb  try_LLaMa_locally.py
Input/: Grimus_en.fb2  books.db
